<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="ButtonInv">Check Inventory</string>
    <string name="ButtonRec">Check Records</string>
    <string name="ButtonQR">Scan QR</string>
    <string name="Inventory"><b>Inventory</b></string>
    <string name="Records"><b>Records</b></string>
    <string name="ScanQR"><b>Scan QR</b></string>
    <string name="inventory">Test</string>
    <string name="record">Test</string>
    <string name="contents">
        Test
    </string>
</resources>