<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonInv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="255dp"
        android:text="@string/ButtonInv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRec"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/ButtonRec"
        app:layout_constraintBottom_toTopOf="@+id/buttonQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInv" />

    <Button
        android:id="@+id/buttonQR"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="255dp"
        android:text="@string/ButtonQR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>